--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,69 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid rgba(3, 69, 248, 0.548);
+  border-color: rgba(3, 69, 248, 0.548) transparent rgba(3, 69, 248, 0.548) transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.modal-app {
+  display: flex;
+  justify-content: center;
+}
+.my-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  width: 900px;
+  height: 400px;
+  background-color: #fff;
+  border: 1px solid grey;
+  box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.75);
+  z-index: 1;
+}
+.my-modal .modal-data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.my-modal .modal-title {
+  padding-top: 10px;
+  margin: 0 auto;
+  font-size: 21px;
+}
+
+.my-modal .modal-bottom button {
+  border: none;
+  font-size: 21px;
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  outline: none;
+  cursor: pointer;
+}
+.my-modal .modal-bottom {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
